2011-01-15  Rik  <octave@nomad.inbox5.com>

	* src/dirfns.cc, src/help.cc, src/input.cc, src/load-save.cc,
	src/oct-hist.cc, src/pager.cc, src/pr-output.cc, src/variables.cc:
	Eliminate @deffn macros.

2011-01-15  John W. Eaton  <jwe@octave.org>

	* syscalls.cc (FWEXITSTATUS, FWIFEXITED): Missing semicolon.

2011-01-15  John W. Eaton  <jwe@octave.org>

	* ov-fcn-handle.cc: Use version instead of flops in test.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/svd.cc: Add Seealso references to svd.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* src/mappers.cc: Add Seealso links between sqrt, cbrt, nthroot
	functions.

2011-01-14  John W. Eaton  <jwe@octave.org>

	* dirfns.cc (Ffnmatch): Use DEFUNX until gnulib's fnmatch is C++
	friendly.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* src/mappers.cc: Add Seealso links between erf variants to docstring.

2011-01-14  John W. Eaton  <jwe@octave.org>

	* sighandlers.cc (BADSIG, BLOCK_SIGNAL, SIGCHLD, BLOCK_CHILD,
	UNBLOCK_CHILD): Move macro definitions here from sighandlers.h.

2011-01-14  John W. Eaton  <jwe@octave.org>

	* Update copyright notices for 2011.

2011-01-13  John W. Eaton  <jwe@octave.org>

	* file-io.cc (mkstemp): Delete.
	Delete decl for mkstemps.
	(Fmkstemp): Assume we have mkstemp from gnulib.

2011-01-13  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__pchip_deriv__.cc, DLD-FUNCTIONS/dot.cc,
	octave.cc: Style fixes.

2011-01-13  David Bateman  <dbateman@free.fr>

	ls-mat5.cc (int save_mat5_element_length (const octave_value&,
	const std::string&, bool, bool)): For sparse matrices use nnz rather
	than nzmax.
	(bool save_mat5_binary_element (std::ostream&, const octave_value&,
	const std::string&, bool, bool, bool, bool)): ditto.

2011-01-13  John W. Eaton  <jwe@octave.org>

	* base-list.h (class octave_base_list): Provide explicit
	default and copy construtors, assignment operator, and destructor.
	* load-path.h (load_path::dir_info::class_info): Likewise.
